# DXlibTemplate

./: .gitignore  CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
Commons/: Math.hpp  Vector2.cpp  Vector2.hpp
Components/: CircleColliderComponent.cpp  CircleColliderComponent.hpp  Component.cpp  Component.hpp  RigidbodyComponent.cpp  RigidbodyComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp
GameObjects/: GameObject.cpp  GameObject.hpp  Player.cpp  Player.hpp
Scenes/: Scene.cpp  Scene.hpp  TestScene.cpp  TestScene.hpp
